--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -25,8 +25,14 @@
 % Требования: Пункт 2.1.1 Требований по оформлению пояснительной записки
 \usepackage{extsizes}
 
+
 % Зачем: Добавляет отступы для абзацев
 % Требования: Пункт 2.1.3 Требований по оформлению пояснительной записки
 \usepackage{indentfirst}
 \parindent=2.8em % Примерно соответсвует 5 символам
+
+
+% Зачем: Настраивает отступы от границ страницы
+% Требования: Пункт 2.1.2
+\usepackage[left=3cm,top=2.0cm,right=1.5cm,bottom=2.7cm]{geometry}
 
