--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -4,6 +4,9 @@
 % Зачем: Установка кодировки исходных файлов
 \usepackage[utf8]{inputenc}
 
+% Зачем: Делает результирующий PDF "searchable and copyable"
+\usepackage{cmap}
+
 % Зачем: Выбор внутренней TeX кодировки
 \usepackage[T2A]{fontenc}
 
@@ -12,9 +15,6 @@
 
 % Зачем: Учет особенностей различных языков
 \usepackage[russian]{babel}
-
-% Зачем: Делает результирующий PDF "searchable and copyable"
-\usepackage{cmap}
 
 % Зачем: Улучшает отображение русских шрифтов.
 % Примечание: Требует шаманства при установке, инструкция http://plumbum-blog.blogspot.com/2010/06/miktex-28-pscyr-04d.html
@@ -33,6 +33,19 @@
 
 
 % Зачем: Настраивает отступы от границ страницы
-% Требования: Пункт 2.1.2
+% Требования: Пункт 2.1.2 Требований по оформлению пояснительной записки
 \usepackage[left=3cm,top=2.0cm,right=1.5cm,bottom=2.7cm]{geometry}
+
+
+% Зачем: Настраивает межстрочный интервал, для размещения 40 +/- 3 строки текста на странице
+% Требования: Пункт 2.1.1 Требований по оформлению пояснительной записки
+\usepackage[nodisplayskipstretch]{setspace} 
+\setstretch{1.1}
+
+
+% Зачем: Выбор шрифта по-умолчанию. 
+% Требования: Пункт 2.1.1 Требований по оформлению пояснительной записки
+% Примечание: В требованиях не указан, какой именно шрифт использовать. По традиции используем TNR.
+\renewcommand{\rmdefault}{ftm} % Times New Roman
+\frenchspacing
 
