--- a/MiKTeX/test.tex
+++ b/MiKTeX/test.tex
@@ -6,11 +6,25 @@
 
 При рукописном способе используют шариковую ручку с пастой черного или синего, или фиолетового цвета. Высота букв и цифр должна быть не менее 3,5 мм. 
 
-При применении текстовых редакторов ЭВМ печать производится шрифтом 13 "= 14  пунктов  с  межстрочным  интервалом,  позволяющим  разместить  
-40 $ \pm $ 3 строки на странице. 
+При применении текстовых редакторов ЭВМ печать производится шрифтом 13\,--\,14  пунктов  с  межстрочным  интервалом,  позволяющим  разместить  
+40\,$ \pm $\,3 строки на странице. 
 
-Номера  разделов,  подразделов,  пунктов и подпунктов следует выделять полужирным  шрифтом.  Заголовки  разделов  допускается  оформлять  полужирным шрифтом размером 14 "= 16 пунктов, а заголовки подразделов полужирным шрифтом размером 14 пунктов. 
+Номера  разделов,  подразделов,  пунктов и подпунктов следует выделять полужирным  шрифтом.  Заголовки  разделов  допускается  оформлять  полужирным шрифтом размером 14\,--\,16 пунктов, а заголовки подразделов полужирным шрифтом размером 14 пунктов. 
 
 Для  акцентирования  внимания  на  определенных  терминах  допускается применять шрифты разной гарнитуры. 
+
+Абзацы в тексте начинают отступом, равным 15\,--\,17 мм при выполнении  записи  рукописным  способом  или  пяти  знакам  при  применении  печатающего устройства вывода ЭВМ.
+
+Все  части  пояснительной  записки  необходимо  излагать  только  на одном языке --- на русском или белорусском, или на одном из иностранных языков, например английском или немецком.
+
+Описки и графические неточности, обнаруженные в тексте пояснительной записки, выполненной рукописным способом, допускается исправлять подчисткой, закрашиванием белой краской и нанесением на том же месте исправленного текста. Помарки и следы не полностью удаленного прежнего текста не допускаются.
+
+Пояснительная записка должна быть оформлена в жестком переплете (в специальной папке для дипломных проектов или работ).
+
+Текст пояснительной записки разделяют на логически сопряженные части --- разделы, а при необходимости и подразделы. Как разделы, так и подразделы могут состоять из одного или нескольких пунктов.
+
+Иногда внутри подраздела необходимо выделить более мелкие смысловые подразделения – пункты, например: характеристики устройств и функциональных элементов технической системы; обоснование этапов планируемого эксперимента, характеристики аппаратов и приборов, необходимых для испытаний; показатели качества технической системы в различных режимах ее работы и т.\,д. В подобных случаях пункты нумеруют в пределах подраздела. Цифровой индекс пункта должен состоять из номеров раздела, подраздела и пункта, разделенных точками, и записан с абзацного отступа.
+
+Пункты при необходимости могут быть разбиты на подпункты, которые нумеруются в пределах каждого пункта. 
 
 \end{document}
