Added explanation on French spacing

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -1,19 +1,19 @@
 % !TeX spellcheck = russian-aot-ieyo
 \documentclass[a4paper,14pt,russian,oneside]{extreport}
 
-% Зачем: Установка кодировки исходных файлов
+% Зачем: Установка кодировки исходных файлов.
 \usepackage[utf8]{inputenc}
 
-% Зачем: Делает результирующий PDF "searchable and copyable"
+% Зачем: Делает результирующий PDF "searchable and copyable".
 \usepackage{cmap}
 
-% Зачем: Выбор внутренней TeX кодировки
+% Зачем: Выбор внутренней TeX кодировки.
 \usepackage[T2A]{fontenc}
 
-% Зачем: Чтобы можно было использовать русские буквы в формулах, но в случае использования предупреждать об этом
+% Зачем: Чтобы можно было использовать русские буквы в формулах, но в случае использования предупреждать об этом.
 \usepackage[warn]{mathtext}
 
-% Зачем: Учет особенностей различных языков
+% Зачем: Учет особенностей различных языков.
 \usepackage[russian]{babel}
 
 % Зачем: Улучшает отображение русских шрифтов.
@@ -22,30 +22,33 @@
 
 
 % Зачем: Добавляет поддержу дополнительных размеров текста 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt.
-% Требования: Пункт 2.1.1 Требований по оформлению пояснительной записки
+% Почему: Пункт 2.1.1 Требований по оформлению пояснительной записки.
 \usepackage{extsizes}
 
 
-% Зачем: Добавляет отступы для абзацев
-% Требования: Пункт 2.1.3 Требований по оформлению пояснительной записки
+% Зачем: Добавляет отступы для абзацев.
+% Почему: Пункт 2.1.3 Требований по оформлению пояснительной записки.
 \usepackage{indentfirst}
-\parindent=2.8em % Примерно соответсвует 5 символам
+\parindent=6ex % Примерно соответсвует 5 символам.
 
 
-% Зачем: Настраивает отступы от границ страницы
-% Требования: Пункт 2.1.2 Требований по оформлению пояснительной записки
+% Зачем: Настраивает отступы от границ страницы.
+% Почему: Пункт 2.1.2 Требований по оформлению пояснительной записки.
 \usepackage[left=3cm,top=2.0cm,right=1.5cm,bottom=2.7cm]{geometry}
 
 
-% Зачем: Настраивает межстрочный интервал, для размещения 40 +/- 3 строки текста на странице
-% Требования: Пункт 2.1.1 Требований по оформлению пояснительной записки
+% Зачем: Настраивает межстрочный интервал, для размещения 40 +/- 3 строки текста на странице.
+% Почему: Пункт 2.1.1 Требований по оформлению пояснительной записки.
 \usepackage[nodisplayskipstretch]{setspace} 
 \setstretch{1.1}
 
 
 % Зачем: Выбор шрифта по-умолчанию. 
-% Требования: Пункт 2.1.1 Требований по оформлению пояснительной записки
+% Почему: Пункт 2.1.1 Требований по оформлению пояснительной записки.
 % Примечание: В требованиях не указан, какой именно шрифт использовать. По традиции используем TNR.
 \renewcommand{\rmdefault}{ftm} % Times New Roman
+
+% Зачем: Отключает использование изменяемых межсловных пробелов.
+% Почему: Так не принято делать в текстах на русском языке.
 \frenchspacing
 
