Set page counter seed to 3

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -52,3 +52,6 @@
 % Почему: Так не принято делать в текстах на русском языке.
 \frenchspacing
 
+% Зачем: Счетчик страниц начинается с 3. Пропускается титульный лист, лист с рефератом и лист технического задания.
+% Почему: Пункт 2.2.8 Требований по оформлению пояснительной записки.
+\setcounter{page}{3}
