Set footnote numeration per page

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -1,5 +1,7 @@
 % !TeX spellcheck = russian-aot-ieyo
-\documentclass[a4paper,14pt,russian,oneside]{extreport}
+% Зачем: Определяет класс документа (То, как будет выглядеть документ)
+% Примечание: параметр draft помечает строки, вышедшие за границы страницы, прямоугольником, в фильной версии его нужно удалить.
+\documentclass[a4paper,14pt,russian,oneside,draft]{extreport}
 
 % Зачем: Установка кодировки исходных файлов.
 \usepackage[utf8]{inputenc}
@@ -55,3 +57,7 @@
 % Зачем: Счетчик страниц начинается с 3. Пропускается титульный лист, лист с рефератом и лист технического задания.
 % Почему: Пункт 2.2.8 Требований по оформлению пояснительной записки.
 \setcounter{page}{3}
+
+% Зачем: Сброс счетчика сносок для каждой страницы
+% Примечание: в "Требованиях по оформлению пояснительной записки" не указано, как нужно делать, но в других БГУИРовских докуметах рекомендуется нумерация отдельная для каждой страницы
+\usepackage[perpage]{footmisc}
