--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -60,4 +60,11 @@
 
 % Зачем: Сброс счетчика сносок для каждой страницы
 % Примечание: в "Требованиях по оформлению пояснительной записки" не указано, как нужно делать, но в других БГУИРовских докуметах рекомендуется нумерация отдельная для каждой страницы
-\usepackage[perpage]{footmisc}
+\usepackage{perpage}
+\MakePerPage{footnote}
+
+% Зачем: Добавляет скобку 1) к номеру сноски
+% Почему: Пункты 2.9.2 и 2.9.1 Требований по оформлению пояснительной записки.
+\makeatletter 
+\def\@makefnmark{\hbox{\@textsuperscript{\normalfont\@thefnmark)}}}
+\makeatother
