Some progress on table of content

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -50,21 +50,39 @@
 % Примечание: В требованиях не указан, какой именно шрифт использовать. По традиции используем TNR.
 \renewcommand{\rmdefault}{ftm} % Times New Roman
 
+
 % Зачем: Отключает использование изменяемых межсловных пробелов.
 % Почему: Так не принято делать в текстах на русском языке.
 \frenchspacing
 
+
 % Зачем: Счетчик страниц начинается с 3. Пропускается титульный лист, лист с рефератом и лист технического задания.
 % Почему: Пункт 2.2.8 Требований по оформлению пояснительной записки.
 \setcounter{page}{3}
+
 
 % Зачем: Сброс счетчика сносок для каждой страницы
 % Примечание: в "Требованиях по оформлению пояснительной записки" не указано, как нужно делать, но в других БГУИРовских докуметах рекомендуется нумерация отдельная для каждой страницы
 \usepackage{perpage}
 \MakePerPage{footnote}
 
+
 % Зачем: Добавляет скобку 1) к номеру сноски
 % Почему: Пункты 2.9.2 и 2.9.1 Требований по оформлению пояснительной записки.
 \makeatletter 
 \def\@makefnmark{\hbox{\@textsuperscript{\normalfont\@thefnmark)}}}
+\makeatother
+
+
+% Зачем: Определяет отступы в содержаии
+% Почему: Пункт 2.2.7 Требований по оформлению пояснительной записки.
+\makeatletter
+\renewcommand{\l@section}{\@dottedtocline{1}{0.5em}{1.2em}}
+\renewcommand{\l@subsection}{\@dottedtocline{2}{1.7em}{2.0em}}
+\makeatother
+
+
+% Зачем: Переопределяем стандартную нумерацию, т.к. в отчете будут только section и т.д. в терминологии TeX
+\makeatletter
+\renewcommand{\thesection}{\arabic{section}}
 \makeatother
