Enhancements in ToC generation.

--- a/MiKTeX/document_specific.tex
+++ b/MiKTeX/document_specific.tex
@@ -2,4 +2,4 @@
 
 % Зачем: Содержание пишется полужирным шрифтом, по центру всеми заглавными буквами
 % Почему: Пункт 2.2.7 Требований по оформлению пояснительной записки.
-\renewcommand \contentsname {\center \textbf{\large{СОДЕРЖАНИЕ}}}
+\renewcommand \contentsname {\centerline{\textbf{\large{СОДЕРЖАНИЕ}}}}
