--- a/MiKTeX/example.tex
+++ b/MiKTeX/example.tex
@@ -86,7 +86,7 @@ Hello \rule[-2pt]{1cm}{3pt} World!\\
 \subsection{Определение желаемого коэффициента усиления разомкнутой системы} 
 \subsection{Анализ устойчивости} 
 \subsection{Выводы} 
-\subsubsction{Пункт подраздела, не должен появится в содержании}
+\subsubsection{Пункт подраздела, не должен появится в содержании}
 \section{Синтез корректирующих устройств}
 \section*{Приложение А (информационное)  Пример заполнения титульного листа}
 \addcontentsline{toc}{section}{Приложение А (информационное)  Пример заполнения титульного листа}
