Update title for bibliography

--- a/MiKTeX/example.tex
+++ b/MiKTeX/example.tex
@@ -78,17 +78,21 @@ Hello \rule[-2pt]{1cm}{3pt} World!\\
 
 % Примеры разделов
 \section*{Введение}
-\addcontentsline{toc}{section}{Введение}
-\section{Анализ нескорректированной системы управления}
-\subsection{Анализ исходных данных} 
-\subsection{Статические и динамические характеристики элементов системы} 
-\subsection{Структурная схема нескорректированной системы} 
-\subsection{Определение желаемого коэффициента усиления разомкнутой системы} 
-\subsection{Анализ устойчивости} 
-\subsection{Выводы} 
-\subsubsection{Пункт подраздела, не должен появится в содержании}
-\section{Синтез корректирующих устройств}
-\section*{Приложение А (информационное)  Пример заполнения титульного листа}
-\addcontentsline{toc}{section}{Приложение А (информационное)  Пример заполнения титульного листа}
+\addcontentsline{toc}{section}{Введение} \pagebreak
+\section{Анализ нескорректированной системы управления} \pagebreak
+\subsection{Анализ исходных данных} \pagebreak 
+\subsection{Статические и динамические характеристики элементов системы} \pagebreak 
+\subsection{Структурная схема нескорректированной системы} \pagebreak 
+\subsection{Определение желаемого коэффициента усиления разомкнутой системы} \pagebreak 
+\subsection{Анализ устойчивости} \pagebreak 
+\subsection{Выводы} \pagebreak 
+\subsubsection{Пункт подраздела, не должен появится в содержании} \pagebreak
+\section{Синтез корректирующих устройств} \pagebreak
+\section*{Приложение А (информационное)  Пример заполнения титульного листа} 
+\addcontentsline{toc}{section}{Приложение А (информационное)  Пример заполнения титульного листа} \pagebreak
+
+
+\begin{thebibliography}{99}
+\end{thebibliography}
 
 \end{document}
