--- a/MiKTeX/document_specific.tex
+++ b/MiKTeX/document_specific.tex
@@ -3,3 +3,7 @@
 % Зачем: Содержание пишется полужирным шрифтом, по центру всеми заглавными буквами
 % Почему: Пункт 2.2.7 Требований по оформлению пояснительной записки.
 \renewcommand \contentsname {\centerline{\textbf{\large{СОДЕРЖАНИЕ}}}}
+
+% Зачем: Изменение надписи для списка литературы
+% Почему: Пункт 2.8.1 Требований по оформлению пояснительной записки.
+\renewcommand\bibname{\bf \normalsize \centerline{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}}
