--- a/MiKTeX/document_specific.tex
+++ b/MiKTeX/document_specific.tex
@@ -1,8 +1,10 @@
 % Данный файл предназначен для включения внутри окружения doucment с помощью команды \input
 
+
 % Зачем: Содержание пишется полужирным шрифтом, по центру всеми заглавными буквами
 % Почему: Пункт 2.2.7 Требований по оформлению пояснительной записки.
-\renewcommand \contentsname {\centerline{\textbf{\large{СОДЕРЖАНИЕ}}}}
+\renewcommand \contentsname {\centerline{\mdseries\large{СОДЕРЖАНИЕ}}}
+
 
 % Зачем: Изменение надписи для списка литературы
 % Почему: Пункт 2.8.1 Требований по оформлению пояснительной записки.
