Issue #3: Fixed hyphenations & overflows in title.

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -129,8 +129,8 @@
   \@startsection {section}{1}%
     {\fivecharsapprox}%
     {-3.5ex \@plus -1ex \@minus -.2ex}%
-    {2.3ex \@plus.2ex}%
-    {\normalfont\large\bfseries\MakeUppercase}}
+    {1em \@plus .2ex}%
+    {\raggedright\hyphenpenalty=10000\normalfont\large\bfseries\MakeUppercase}}
 \makeatother
 
 % Зачем: Задает стиль заголовков подразделов
@@ -139,8 +139,8 @@
   \@startsection{subsection}{2}%
     {\fivecharsapprox}%
     {-3.25ex\@plus -1ex \@minus -.2ex}%
-    {1.5ex \@plus .2ex}%
-    {\normalfont\large\bfseries}}
+    {1em \@plus .2ex}%
+    {\raggedright\hyphenpenalty=10000\normalfont\large\bfseries}}
 \makeatother
 
 % Зачем: Задает стиль заголовков пунктов
@@ -149,6 +149,6 @@
   \@startsection{subsubsection}{3}%
     {\fivecharsapprox}%
     {-3.25ex\@plus -1ex \@minus -.2ex}%
-    {1.5ex \@plus .2ex}%
-    {\normalfont\normalsize\bfseries}}
+    {\z@}%
+    {\raggedright\hyphenpenalty=10000\normalfont\normalsize\bfseries}}
 \makeatother
