Enhancements in example.tex

--- a/MiKTeX/example.tex
+++ b/MiKTeX/example.tex
@@ -1,13 +1,17 @@
 \input{preamble}
 
 \begin{document}
+
 \input{document_specific}
 
 \tableofcontents
 \newpage
 
+\section{Требования к пояснительной записке}
 
-%\section{Пояснительную  записку  выполняют  рукописным  способом  или  с применением печатающих и графических устройств вывода ЭВМ}
+\subsection{Общие положения}
+
+\subsubsection{} 
 Пояснительную  записку  выполняют  рукописным  способом  или  с применением печатающих и графических устройств вывода ЭВМ. 
 
 При рукописном способе используют шариковую ручку с пастой черного или синего, или фиолетового цвета. Высота букв и цифр должна быть не менее 3,5 мм. 
@@ -19,98 +23,69 @@
 
 Для  акцентирования  внимания  на  определенных  терминах  допускается применять шрифты разной гарнитуры. 
 
+\subsubsection{}
+Текст располагают на одной стороне листа формата А4 с соблюдением размеров полей и интервалов, указанных в приложении Л.
+
+\subsubsection{}
 Абзацы в тексте начинают отступом, равным 15\,--\,17 мм при выполнении  записи  рукописным  способом  или  пяти  знакам  при  применении  печатающего устройства вывода ЭВМ.
 
+\subsubsection{} 
 Все  части  пояснительной  записки  необходимо  излагать  только  на одном языке --- на русском или белорусском, или на одном из иностранных языков, например английском или немецком.
 
+\subsubsection{} 
 Описки и графические неточности, обнаруженные в тексте пояснительной записки, выполненной рукописным способом, допускается исправлять подчисткой, закрашиванием белой краской и нанесением на том же месте исправленного текста. Помарки и следы не полностью удаленного прежнего текста не допускаются.
 
-Пояснительная записка\footnote{Ага, должна, от гопников удобнее отбиваться} должна быть оформлена в жестком переплете (в специальной папке для дипломных проектов или работ).
+\subsubsection{} 
+Пояснительная записка\footnote{Пример сноски} должна быть оформлена в жестком переплете (в специальной папке для дипломных проектов или работ).
 
+
+\section{Рубрикации, заголовки и содержание}
+
+\subsubsection{} 
 Текст пояснительной записки разделяют на логически сопряженные части --- разделы, а при необходимости и подразделы. Как разделы, так и подразделы могут состоять из одного или нескольких пунктов.
 
-\doublehyphendemerits=100000
 Иногда внутри подраздела необходимо выделить более мелкие смысловые подразделения – пункты, например: характеристики устройств и функциональных элементов технической системы; обоснование этапов планируемого эксперимента, характеристики аппаратов и приборов, необходимых для испытаний; показатели качества технической системы в различных режимах ее работы и т.\,д. В подобных случаях пункты нумеруют в пределах подраздела. Цифровой индекс пункта должен состоять из номеров раздела, подраздела и пункта, разделенных точками, и записан с абзацного отступа. 
 
 Пункты при необходимости могут быть разбиты на подпункты, которые нумеруются в пределах каждого пункта. 
 
-\noindent\newlength{\ldn}%
-\ldn=1em 1\,em равен \the\ldn\\
-\ldn=1ex 1\,ex равен \the\ldn
 
-\newlength{\ldm}\settowidth{\ldm}{M}\the\ldm
-
-{ 
-\fboxrule=1ex
-\fbox { Hello }
-}
-\fbox { world }
-
-\noindent Hello World!\\
-\hspace{10mm}Hello World!\\
-\hspace*{10mm}Hello World!\\
-Hello\hspace*{-2mm}World!\\
-
-
-Hello World!\\
-Hello\hfill World!\\
-A\hfill\hfill{}B\hfill{}C\\
-Hello\dotfill{}World!\\
-Hello\hrulefill{}World!\\
-
-Hello\rule{1cm}{.3pt}World!\\
-Hello \rule{10pt}{10pt} World!\\
-Hello \rule[2pt]{1cm}{3pt} World!\\
-Hello \rule[-2pt]{1cm}{3pt} World!\\
-Примечание\footnote{Сноска 1}
-
-\the\doublehyphendemerits\\
-\the\finalhyphendemerits\\
-\the\righthyphenmin\\
-\the\lefthyphenmin\\
-\the\clubpenalty\\
-\the\widowpenalty\\
-\the\pretolerance\\
-\the\tolerance\\
 Примечание\footnote{Сноска 2}
-%\vfill
 
 
-% Примеры разделов
+% Пример организации пустых разделов
 \section*{Введение}
 \label{sec:intro}
-\addcontentsline{toc}{section}{Введение} \pagebreak
+\addcontentsline{toc}{section}{Введение} \newpage
 
-\section{Анализ нескорректированной системы управления} \pagebreak
+\section{Анализ нескорректированной системы управления} \newpage
 \label{sec:analysys_equations}
 
-\subsection{Анализ исходных данных} \pagebreak 
+\subsection{Анализ исходных данных} \newpage 
 \label{sec:analysys_data}
 
-\subsection{Статические и динамические характеристики элементов системы} \pagebreak 
+\subsection{Статические и динамические характеристики элементов системы} \newpage 
 \label{sec:stat_and_dyn}
 
-\subsection{Структурная схема нескорректированной системы} \pagebreak 
+\subsection{Структурная схема нескорректированной системы} \newpage 
 \label{sec:str_schema}
 
-\subsection{Определение желаемого коэффициента усиления разомкнутой системы} \pagebreak 
+\subsection{Определение желаемого коэффициента усиления разомкнутой системы} \newpage 
 \label{sec:determ_factor}
 
-\subsection{Анализ устойчивости} \pagebreak 
+\subsection{Анализ устойчивости} \newpage 
 \label{sec:analysys_rob}
 
-\subsection{Выводы} \pagebreak 
+\subsection{Выводы} \newpage 
 \label{sec:conclusion}
+Как показано в книге~\cite[с.~107]{karow2001}
 
-\subsubsection{Пункт подраздела, не должен появится в содержании} \pagebreak
-\section{Синтез корректирующих устройств} \pagebreak
+\subsubsection{Пункт подраздела, не должен появится в содержании} \newpage
+\section{Синтез корректирующих устройств} \newpage
 \section*{Приложение А (информационное)  Пример заполнения титульного листа} 
-\addcontentsline{toc}{section}{Приложение А (информационное)  Пример заполнения титульного листа} \pagebreak
+\addcontentsline{toc}{section}{Приложение А (информационное)  Пример заполнения титульного листа} \newpage
 
 Смотри страницу \pageref{sec:analysys_data} анализа данных
 это раздел \ref{sec:analysys_data}
 
-\begin{thebibliography}{99}
-\end{thebibliography}
 
 \end{document}
