Enhanced headers style

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -133,7 +133,7 @@
 \renewcommand\section{%
   \@startsection {section}{1}%
     {\fivecharsapprox}%
-    {-3.5ex \@plus -1ex \@minus -.2ex}%
+    {-1em \@plus -1ex \@minus -.2ex}%
     {1em \@plus .2ex}%
     {\newpage\raggedright\hyphenpenalty=10000\normalfont\large\bfseries\MakeUppercase}}
 \makeatother
@@ -145,9 +145,9 @@
 \renewcommand\subsection{%
   \@startsection{subsection}{2}%
     {\fivecharsapprox}%
-    {-3.25ex\@plus -1ex \@minus -.2ex}%
+    {-1em \@plus -1ex \@minus -.2ex}%
     {1em \@plus .2ex}%
-    {\raggedright\hyphenpenalty=10000\normalfont\large\bfseries}}
+    {\raggedright\hyphenpenalty=10000\normalfont\normalsize\bfseries}}
 \makeatother
 
 
@@ -157,7 +157,7 @@
 \renewcommand\subsubsection{
   \@startsection{subsubsection}{3}%
     {\fivecharsapprox}%
-    {-3.25ex\@plus -1ex \@minus -.2ex}%
+    {-1em \@plus -1ex \@minus -.2ex}%
     {\z@}%
     {\raggedright\hyphenpenalty=10000\normalfont\normalsize\bfseries}}
 \makeatother
