Enhanced example.tex

--- a/MiKTeX/example.tex
+++ b/MiKTeX/example.tex
@@ -39,17 +39,27 @@
 Пояснительная записка\footnote{Пример сноски} должна быть оформлена в жестком переплете (в специальной папке для дипломных проектов или работ).
 
 
-\section{Рубрикации, заголовки и содержание}
+\subsection{Рубрикации, заголовки и содержание}
 
 \subsubsection{} 
 Текст пояснительной записки разделяют на логически сопряженные части --- разделы, а при необходимости и подразделы. Как разделы, так и подразделы могут состоять из одного или нескольких пунктов.
 
+\subsubsection{}
+Разделы должны иметь порядковые  номера,  обозначаемые арабски-ми цифрами без точки  в конце  и записанные с абзацного отступа. Подразделы 
+нумеруют в пределах раздела, к которому они относятся.
+
+\subsubsection{}
 Иногда внутри подраздела необходимо выделить более мелкие смысловые подразделения – пункты, например: характеристики устройств и функциональных элементов технической системы; обоснование этапов планируемого эксперимента, характеристики аппаратов и приборов, необходимых для испытаний; показатели качества технической системы в различных режимах ее работы и т.\,д. В подобных случаях пункты нумеруют в пределах подраздела. Цифровой индекс пункта должен состоять из номеров раздела, подраздела и пункта, разделенных точками, и записан с абзацного отступа. 
 
 Пункты при необходимости могут быть разбиты на подпункты, которые нумеруются в пределах каждого пункта. 
 
+\subsubsection{}
+Если в пояснительной записке выделены только разделы, то пункты нумеруют в пределах раздела.
 
-Примечание\footnote{Сноска 2}
+\subsubsection{}
+Rаждый раздел и подраздел должен иметь краткий и ясный заголо-вок. Пункты, как правило, заголовков не имеют. Заголовки разделов записывают прописными буквами без точки в конце заголовка. Заголовки подразделов записывают стро чными буквами, начиная с первой прописной. Заголовки не подчеркивают. Перен осы слов в заголовках не допускаются. Если заголовок состоит из двух предложений, их разделяют точкой.
+
+В случае, когда заголовки раздела или подраздела занимают несколько строк, то строки выравниваются  по первой букве  заголовка  в соответствии с приложением Л\footnote{Его тут нет}.
 
 
 % Пример организации пустых разделов
