Small enhancements in ToC.

--- a/MiKTeX/example.tex
+++ b/MiKTeX/example.tex
@@ -4,8 +4,7 @@
 
 \input{document_specific}
 
-\tableofcontents
-\newpage
+\input{table_of_contents}
 
 \section{Требования к пояснительной записке}
 
@@ -57,10 +56,21 @@
 Если в пояснительной записке выделены только разделы, то пункты нумеруют в пределах раздела.
 
 \subsubsection{}
-Rаждый раздел и подраздел должен иметь краткий и ясный заголо-вок. Пункты, как правило, заголовков не имеют. Заголовки разделов записывают прописными буквами без точки в конце заголовка. Заголовки подразделов записывают стро чными буквами, начиная с первой прописной. Заголовки не подчеркивают. Перен осы слов в заголовках не допускаются. Если заголовок состоит из двух предложений, их разделяют точкой.
+Каждый раздел и подраздел должен иметь краткий и ясный заголо-вок. Пункты, как правило, заголовков не имеют. Заголовки разделов записывают прописными буквами без точки в конце заголовка. Заголовки подразделов записывают стро чными буквами, начиная с первой прописной. Заголовки не подчеркивают. Перен осы слов в заголовках не допускаются. Если заголовок состоит из двух предложений, их разделяют точкой.
 
 В случае, когда заголовки раздела или подраздела занимают несколько строк, то строки выравниваются  по первой букве  заголовка  в соответствии с приложением Л\footnote{Его тут нет}.
 
+\subsubsection{}
+Каждый раздел пояснительной записки рекомендуется начинать с новой страницы. 
+
+Между заголовком раздела (подраздела) и текстом оставляют пробельную строку --- при компьютерном способе выполнения  записки;  интервал  шириной 15\,мм --- при рукописном способе (см.~приложение Л).
+
+Между заголовками разделов и входящих в него подразделов допускается помещать небольшой вводный текст, предваряющий подраздел.
+
+\subsubsection{}
+Перечень всех разделов и подразделов, включающий порядковые номера и заголовки, оформляют в виде содержания --- обязательного элемента пояснительной записки. Содержание помещают непосредственно за заданием на проектирование и включают в общую нумерацию страниц.
+
+Слово \MakeUppercase{содержание} записывают прописными буквами полужирным шрифтом 14~---~16 пунктов и располагают по центру строки. Между словом \MakeUppercase{содержание} и самим содержанием оставляют промежуток, равный пробельной строке. В содержании заголовки выравнивают, соподчиняя по разделам, подразделам и пунктам (если последние имеют заголовки), смещая вертикали вправо относительно друг друга на 2 знака.
 
 % Пример организации пустых разделов
 \section*{Введение}
