Added bibliography database.

--- a/MiKTeX/example.tex
+++ b/MiKTeX/example.tex
@@ -105,6 +105,11 @@
 \section*{Приложение А (информационное)  Пример заполнения титульного листа} 
 \addcontentsline{toc}{section}{Приложение А (информационное)  Пример заполнения титульного листа} \newpage
 
+\cite{Morozov_2011}
+
+
+\bibliographystyle{utf8gost705u}
+\bibliography{bibliography_database_utf8.bib}
 
 
 \end{document}
