Working on bibliographic styles

--- a/MiKTeX/example.tex
+++ b/MiKTeX/example.tex
@@ -107,9 +107,14 @@
 
 \cite{Morozov_2011}
 
+\cite[книженция]{kulezin_2004}
 
-\bibliographystyle{utf8gost705u}
-\bibliography{bibliography_database_utf8.bib}
+\cite[книженция]{kulezin_2004}
+
+\cite{guk_1999}
+
+
+\bibliography{bibliography_database}
 
 
 \end{document}
