--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -161,3 +161,7 @@
     {\z@}%
     {\raggedright\hyphenpenalty=10000\normalfont\normalsize\bfseries}}
 \makeatother
+
+% Зачем: Задает стиль библиографии
+\bibliographystyle{styles/belarus-specific-utf8gost780u}
+%\bibliographystyle{unsrt}
