Set language in bib file

--- a/MiKTeX/bibliography_database.bib
+++ b/MiKTeX/bibliography_database.bib
@@ -8,7 +8,8 @@
   author = {М. Гук},
   pages = {288},
   owner = {mstyura},
-  timestamp = {2013.02.20}
+  timestamp = {2013.02.20},
+  language = {russian}
 }
 
 @BOOK{kulezin_2004,
@@ -19,7 +20,8 @@
   pages = {440},
   address = {М},
   owner = {mstyura},
-  timestamp = {2013.02.20}
+  timestamp = {2013.02.20},
+  language = {russian}
 }
 
 @BOOK{Morozov_2011,
@@ -28,6 +30,7 @@
   year = {2011},
   author = {Д.К. Морозов and А.Я. Пархоменко},
   owner = {mstyura},
-  timestamp = {2013.02.20}
+  timestamp = {2013.02.20},
+  language = {russian}
 }
 
