Fixed number of pages output

--- a/MiKTeX/bibliography_database.bib
+++ b/MiKTeX/bibliography_database.bib
@@ -12,13 +12,26 @@
   language = {russian}
 }
 
+@BOOK{kluev_1989,
+  title = {Технические средства диагностирования : справочник},
+  publisher = {Машиностроение},
+  year = {1989},
+  author = {В.В. Клюев1 and В.В. Клюев2 and В.В. Клюев3 and В.В. Клюев4 and В.В.
+  Клюев5},
+  pages = {672},
+  address = {М.},
+  owner = {mstyura},
+  timestamp = {2013.02.20},
+  language = {russian}
+}
+
 @BOOK{kulezin_2004,
   title = {Современные семейства ПЛИС фирмы Xilinx : справ. пособие},
   publisher = {Горячая линия–Телеком},
   year = {2004},
   author = {М. О. Кузелин and Д. А. Кнышев and В. Ю. Зотов},
   pages = {440},
-  address = {М},
+  address = {М.},
   owner = {mstyura},
   timestamp = {2013.02.20},
   language = {russian}
@@ -33,4 +46,6 @@
   timestamp = {2013.02.20},
   language = {russian}
 }
+
+
 
